# dspy_examples

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
docs/plans/: 2026-03-14-dspy-optimization.md  2026-03-15-optimization-architecture.md  2026-03-15-optimization-implementation.md  2026-03-22-batch-processing-design.md  2026-03-22-batch-processing-with-pocketflow.md  2026-03-22-gepa-better-together-design.md  2026-03-22-observer-builder-implementation.md  2026-03-22-observer-builder-patterns.md  (+1 more)
prompts/: unoptimized_prompt.md
src/dspy_examples/: __init__.py  (+7 more)
tests/: __init__.py  test_batch_builder.py  test_bootstrap_fewshot.py  test_cache.py  test_commands_base.py  test_commands_batch.py  test_commands_flows.py  test_commands_nodes.py  test_commands_queue.py  test_config.py  test_main.py  test_observable.py  test_observers_base.py  test_observers_callback.py  test_observers_logging.py  test_observers_metric.py  test_observers_progress.py  test_optimizer_better_together.py  test_optimizer_bootstrap_fewshot.py  test_optimizer_bootstrap_finetune.py  test_optimizer_bootstrap_random.py  test_optimizer_copro.py  test_optimizer_factory.py  test_optimizer_gepa.py  test_optimizer_mipro_v2.py  test_optimizer_simba.py  test_optimizers_base.py  test_pipeline.py  test_pipeline_builder.py  test_pipeline_observer.py  test_pocketflow_core.py  test_prompts.py  test_provider_anthropic.py  test_provider_factory.py  test_provider_google.py  test_provider_ollama.py  test_provider_openai.py  test_provider_openrouter.py  test_providers_base.py  test_settings.py  (+2 more)
(+43 files in other folders)
